hphp/test/zend/bad/Zend/tests/argument_restriction_006.php
<?php
Abstract Class Base {
	public function test($foo, $extra = array("test")) {
	}	
}

class Sub extends Base {
	public function test($foo, $extra) {
	}	
}
?>